[package]
name = "tower-attack-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
hyper = { version = "0.14", default-features = false, features = ["server", "client", "tcp", "http1", "http2"] }
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"] }
log = "0.4"
nadylib = { git = "https://github.com/Nadybot/nadylib", branch = "unstable", default-features = false, features = ["async", "mmdb"] }
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "signal", "macros"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
